--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,20 @@ path = "src/main.rs"
 [dependencies]
 axum = "0.8.4"
 serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+config = { version = "0.15.15", default-features = false, features = ["yaml"] }
+sqlx = { version = "0.8.6", default-features = false, features = [
+  "chrono",
+  "macros",
+  "migrate",
+  "postgres",
+  "runtime-tokio-rustls",
+  "uuid",
+] }
+uuid = { version = "1.18.1", features = ["v7"] }
+chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 
 [dev-dependencies]
-reqwest = "0.12.23"
+reqwest = { version = "0.12.23", features = ["json"] }
+testcontainers = "0.25.0"
+testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
