--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,15 +4,13 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - "postgresql_data:/bitnami/postgresql"
-    env_file:
-      - .env
+      - "postgresql_data:/var/lib/postgresql/data"
     environment:
       POSTGRES_DB: newsletter
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 1s
       timeout: 5s
       retries: 5
