--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - "postgresql_data:/var/lib/postgresql/data"
+      - postgresql_data:/var/lib/postgresql
     environment:
       POSTGRES_DB: newsletter
       POSTGRES_USER: postgres
