--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ sqlx = { version = "0.8.6", default-features = false, features = [
 ] }
 uuid = { version = "1.18.1", features = ["v7"] }
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
+secrecy = { version = "0.10.3", features = ["serde"] }
 
 [dev-dependencies]
 reqwest = { version = "0.12.23", features = ["json"] }
