--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ sqlx = { version = "0.8.6", default-features = false, features = [
 uuid = { version = "1.18.1", features = ["v7"] }
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 secrecy = { version = "0.10.3", features = ["serde"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
+tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
+tower = "0.5.2"
 
 [dev-dependencies]
 reqwest = { version = "0.12.23", features = ["json"] }
