--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,10 @@
-app_port: 8000
-database:
+app:
+  host: "localhost"
+  port: 8000
+db:
   host: "localhost"
   port: 5432
   username: "postgres"
   password: "postgres"
   db_name: "newsletter"
+  require_ssl: false
