--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,11 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
 tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
 tower = "0.5.2"
+validator = { version = "0.20.0", features = ["derive"] }
+regex = "1.11.2"
+once_cell = "1.21.3"
+anyhow = "1.0.99"
+unicode-segmentation = "1.12.0"
 
 [dev-dependencies]
 reqwest = { version = "0.12.23", features = ["json"] }
