--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,17 @@ name = "newsletter"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1.0.99"
 axum = "0.8.4"
-serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 config = { version = "0.15.15", default-features = false, features = ["yaml"] }
+regex = "1.11.2"
+reqwest = { version = "0.12.23", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
+secrecy = { version = "0.10.3", features = ["serde"] }
+serde = { version = "1.0.219", features = ["derive"] }
 sqlx = { version = "0.8.6", default-features = false, features = [
   "chrono",
   "macros",
@@ -23,20 +30,18 @@ sqlx = { version = "0.8.6", default-features = false, features = [
   "runtime-tokio-rustls",
   "uuid",
 ] }
-uuid = { version = "1.18.1", features = ["v7"] }
-chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
-secrecy = { version = "0.10.3", features = ["serde"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
-tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 tower = "0.5.2"
-validator = { version = "0.20.0", features = ["derive"] }
-regex = "1.11.2"
-once_cell = "1.21.3"
-anyhow = "1.0.99"
+tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = [
+  "registry",
+  "env-filter",
+] }
 unicode-segmentation = "1.12.0"
+uuid = { version = "1.18.1", features = ["v7"] }
+validator = { version = "0.20.0", features = ["derive"] }
 
 [dev-dependencies]
-reqwest = { version = "0.12.23", features = ["json"] }
 testcontainers = "0.25.0"
 testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
