--- a/config.yaml
+++ b/config.yaml
@@ -8,3 +8,8 @@ db:
   password: "postgres"
   db_name: "newsletter"
   require_ssl: false
+email_client:
+  base_url: "localhost"
+  sender_email: "test@example.com"
+  authorization_token: "secret-token"
+  timeout_milliseconds: 10000
