--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1.0.99"
 axum = "0.8.4"
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 config = { version = "0.15.15", default-features = false, features = ["yaml"] }
+rand = { version = "0.9.2", features = ["std_rng"] }
 regex = "1.11.2"
 reqwest = { version = "0.12.23", default-features = false, features = [
   "json",
