add error logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ sqlx = { version = "0.8.6", default-features = false, features = [
   "runtime-tokio-rustls",
   "uuid",
 ] }
+thiserror = "2.0.17"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
