--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ db:
   password: "postgres"
   db_name: "newsletter"
   require_ssl: false
-email_client:
+email:
   base_url: "localhost"
   sender_email: "test@example.com"
   authorization_token: "secret-token"
